Algumas alteraçoes